--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -9,4 +9,4 @@
 /webassets/ @alex-kovoy @russjones @r0mant
 
 # Repository Management 
-/.github/workflows/ @russjones @r0mant
+/.github/workflows/ @russjones @r0mant @zmb3
