Remove credentials from FS on exit

--- a/.drone.yml
+++ b/.drone.yml
@@ -1401,6 +1401,7 @@ steps:
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > /releases.crt
   - echo $RELEASES_KEY | base64 -d > /releases.key
+  - trap EXIT "rm -f /releases.crt /releases.key"
   - CREDENTIALS="--cert /releases.crt --key /releases.key"
   - apk add --no-cache curl
   - |-
@@ -1528,6 +1529,7 @@ steps:
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > /releases.crt
   - echo $RELEASES_KEY | base64 -d > /releases.key
+  - trap EXIT "rm -f /releases.crt /releases.key"
   - CREDENTIALS="--cert /releases.crt --key /releases.key"
   - apk add --no-cache curl
   - |-
@@ -1658,6 +1660,7 @@ steps:
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > /releases.crt
   - echo $RELEASES_KEY | base64 -d > /releases.key
+  - trap EXIT "rm -f /releases.crt /releases.key"
   - CREDENTIALS="--cert /releases.crt --key /releases.key"
   - apk add --no-cache curl
   - |-
@@ -1702,7 +1705,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:397
 ################################################
 
 kind: pipeline
@@ -1808,6 +1811,7 @@ steps:
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > /releases.crt
   - echo $RELEASES_KEY | base64 -d > /releases.key
+  - trap EXIT "rm -f /releases.crt /releases.key"
   - CREDENTIALS="--cert /releases.crt --key /releases.key"
   - apk add --no-cache curl
   - |-
@@ -1857,7 +1861,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:397
 ################################################
 
 kind: pipeline
@@ -1960,6 +1964,7 @@ steps:
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > /releases.crt
   - echo $RELEASES_KEY | base64 -d > /releases.key
+  - trap EXIT "rm -f /releases.crt /releases.key"
   - CREDENTIALS="--cert /releases.crt --key /releases.key"
   - apk add --no-cache curl
   - |-
@@ -2009,7 +2014,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:397
 ################################################
 
 kind: pipeline
@@ -2106,6 +2111,7 @@ steps:
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > /releases.crt
   - echo $RELEASES_KEY | base64 -d > /releases.key
+  - trap EXIT "rm -f /releases.crt /releases.key"
   - CREDENTIALS="--cert /releases.crt --key /releases.key"
   - apk add --no-cache curl
   - |-
@@ -2150,7 +2156,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:397
 ################################################
 
 kind: pipeline
@@ -2244,6 +2250,7 @@ steps:
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > /releases.crt
   - echo $RELEASES_KEY | base64 -d > /releases.key
+  - trap EXIT "rm -f /releases.crt /releases.key"
   - CREDENTIALS="--cert /releases.crt --key /releases.key"
   - apk add --no-cache curl
   - |-
@@ -2371,6 +2378,7 @@ steps:
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > /releases.crt
   - echo $RELEASES_KEY | base64 -d > /releases.key
+  - trap EXIT "rm -f /releases.crt /releases.key"
   - CREDENTIALS="--cert /releases.crt --key /releases.key"
   - apk add --no-cache curl
   - |-
@@ -2415,7 +2423,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:397
 ################################################
 
 kind: pipeline
@@ -2521,6 +2529,7 @@ steps:
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > /releases.crt
   - echo $RELEASES_KEY | base64 -d > /releases.key
+  - trap EXIT "rm -f /releases.crt /releases.key"
   - CREDENTIALS="--cert /releases.crt --key /releases.key"
   - apk add --no-cache curl
   - |-
@@ -2570,7 +2579,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:397
 ################################################
 
 kind: pipeline
@@ -2667,6 +2676,7 @@ steps:
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > /releases.crt
   - echo $RELEASES_KEY | base64 -d > /releases.key
+  - trap EXIT "rm -f /releases.crt /releases.key"
   - CREDENTIALS="--cert /releases.crt --key /releases.key"
   - apk add --no-cache curl
   - |-
@@ -3173,6 +3183,7 @@ steps:
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > /releases.crt
   - echo $RELEASES_KEY | base64 -d > /releases.key
+  - trap EXIT "rm -f /releases.crt /releases.key"
   - CREDENTIALS="--cert /releases.crt --key /releases.key"
   - apk add --no-cache curl
   - |-
@@ -3300,6 +3311,7 @@ steps:
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > /releases.crt
   - echo $RELEASES_KEY | base64 -d > /releases.key
+  - trap EXIT "rm -f /releases.crt /releases.key"
   - CREDENTIALS="--cert /releases.crt --key /releases.key"
   - apk add --no-cache curl
   - |-
@@ -3344,7 +3356,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:397
 ################################################
 
 kind: pipeline
@@ -3441,6 +3453,7 @@ steps:
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > /releases.crt
   - echo $RELEASES_KEY | base64 -d > /releases.key
+  - trap EXIT "rm -f /releases.crt /releases.key"
   - CREDENTIALS="--cert /releases.crt --key /releases.key"
   - apk add --no-cache curl
   - |-
@@ -3485,7 +3498,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:397
 ################################################
 
 kind: pipeline
@@ -3582,6 +3595,7 @@ steps:
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > /releases.crt
   - echo $RELEASES_KEY | base64 -d > /releases.key
+  - trap EXIT "rm -f /releases.crt /releases.key"
   - CREDENTIALS="--cert /releases.crt --key /releases.key"
   - apk add --no-cache curl
   - |-
@@ -3626,7 +3640,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:397
 ################################################
 
 kind: pipeline
@@ -3732,6 +3746,7 @@ steps:
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > /releases.crt
   - echo $RELEASES_KEY | base64 -d > /releases.key
+  - trap EXIT "rm -f /releases.crt /releases.key"
   - CREDENTIALS="--cert /releases.crt --key /releases.key"
   - apk add --no-cache curl
   - |-
@@ -3781,7 +3796,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:396
+# Generated at dronegen/tag.go:397
 ################################################
 
 kind: pipeline
@@ -3887,6 +3902,7 @@ steps:
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > /releases.crt
   - echo $RELEASES_KEY | base64 -d > /releases.key
+  - trap EXIT "rm -f /releases.crt /releases.key"
   - CREDENTIALS="--cert /releases.crt --key /releases.key"
   - apk add --no-cache curl
   - |-
@@ -4022,6 +4038,7 @@ steps:
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > /releases.crt
   - echo $RELEASES_KEY | base64 -d > /releases.key
+  - trap EXIT "rm -f /releases.crt /releases.key"
   - CREDENTIALS="--cert /releases.crt --key /releases.key"
   - apk add --no-cache curl
   - |-
@@ -4801,6 +4818,6 @@ volumes:
       name: drone-s3-debrepo-pvc
 ---
 kind: signature
-hmac: 18491183f6fc8bd81b57fbb7f42f3e0709cd8f7ab8f1fb33eaf00ff7728e42d0
+hmac: 042afea54993116fad42ab5e83941351da04c0c3b792178378585fe253f503d1
 
 ...
