--- a/.drone.yml
+++ b/.drone.yml
@@ -1397,7 +1397,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -1526,7 +1526,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -1658,7 +1658,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -1810,7 +1810,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -1964,7 +1964,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -2112,7 +2112,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -2252,7 +2252,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -2381,7 +2381,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -2533,7 +2533,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -2681,7 +2681,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -2813,7 +2813,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -2975,7 +2975,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -3137,7 +3137,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -3264,7 +3264,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -3393,7 +3393,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -3536,7 +3536,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -3679,7 +3679,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -3831,7 +3831,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -3988,7 +3988,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -4125,7 +4125,7 @@ steps:
 - name: Register artifacts
   image: docker
   commands:
-  - WORKSPACE_DIR=${WORKSPACE_DIR-/}
+  - WORKSPACE_DIR=$${WORKSPACE_DIR:-/}
   - VERSION=$(cat $WORKSPACE_DIR/go/.version.txt)
   - RELEASES_HOST=https://releases-staging.platform.teleport.sh
   - echo $RELEASES_CERT | base64 -d > $WORKSPACE_DIR/releases.crt
@@ -4910,6 +4910,6 @@ volumes:
       name: drone-s3-debrepo-pvc
 ---
 kind: signature
-hmac: f9523233079bd6d43fa75df7f2d26e57240e35c65ba9f19eeaa7dd078ad80c3f
+hmac: 40f6f6c6411d8a5ca5ac3aafd9c4a53c945119538b7ba17a4b05f4ef20b39091
 
 ...
