--- a/.drone.yml
+++ b/.drone.yml
@@ -2834,6 +2834,7 @@ steps:
       from_secret: RELEASES_CERT
     RELEASES_KEY:
       from_secret: RELEASES_KEY
+    WORKSPACE_DIR: /tmp/build-darwin-amd64
 - name: Upload to S3
   commands:
   - set -u
@@ -2995,6 +2996,7 @@ steps:
       from_secret: RELEASES_CERT
     RELEASES_KEY:
       from_secret: RELEASES_KEY
+    WORKSPACE_DIR: /tmp/build-darwin-amd64-pkg
 - name: Upload to S3
   commands:
   - set -u
@@ -3156,6 +3158,7 @@ steps:
       from_secret: RELEASES_CERT
     RELEASES_KEY:
       from_secret: RELEASES_KEY
+    WORKSPACE_DIR: /tmp/build-darwin-amd64-pkg-tsh
 - name: Upload to S3
   commands:
   - set -u
@@ -4907,6 +4910,6 @@ volumes:
       name: drone-s3-debrepo-pvc
 ---
 kind: signature
-hmac: 8a894a933e20406c446d347a5d4fdba4bfa8e0f84da8d0101e6dff963c1f71c9
+hmac: 79a0677656d9ea092798e8fd4901a1e6b10d20ed2642cf4c561143ecd45ada56
 
 ...
